--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/ri": "^1.1.4",
     "@unocss/preset-attributify": "^0.47.5",
     "@unocss/preset-web-fonts": "^0.47.5",
+    "@unocss/preset-wind": "^0.47.5",
     "@unocss/vite": "^0.47.5",
     "@vitejs/plugin-vue": "^3.2.0",
     "naive-ui": "^2.34.2",
