--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "vue": "^3.2.41"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.33.1",
     "@iconify-json/ri": "^1.1.4",
     "@unocss/preset-attributify": "^0.47.5",
     "@unocss/preset-web-fonts": "^0.47.5",
     "@unocss/preset-wind": "^0.47.5",
     "@unocss/vite": "^0.47.5",
     "@vitejs/plugin-vue": "^3.2.0",
+    "eslint": "^8.29.0",
     "naive-ui": "^2.34.2",
     "typescript": "^4.6.4",
     "unocss": "^0.47.5",
